[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/JumperPack/PNG/Enemies/slimeDead.png" type="Texture" id=1]
[ext_resource path="res://Assets/JumperPack/PNG/Enemies/slimeWalk2.png" type="Texture" id=2]
[ext_resource path="res://Assets/JumperPack/PNG/Enemies/slimeWalk1.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PinkSlime.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29, 8 )

[node name="PinkSlime" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "crawl"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="FloorDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="TopCollisionDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCollisionDetector"]
position = Vector2( 0, -10 )
shape = SubResource( 4 )

[node name="SidesCollisionDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesCollisionDetector"]
position = Vector2( 0, 4 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="TopCollisionDetector" to="." method="_on_TopCollisionDetector_body_entered"]
[connection signal="body_entered" from="SidesCollisionDetector" to="." method="_on_SidesCollisionDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
